# Personal_Assistance

./: Dockerfile  pyproject.toml
personal_assistant/src/: main.py
personal_assistant/src/project_willy/methods/: authorization.py  registration.py
